--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ header {
 
 nav {
   display: flex;
+  position: fixed;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -23,6 +24,7 @@ nav {
   align-items: center;
   row-gap: 4rem;
   padding-top: 7rem;
+  margin-top: 9.4rem;
 }
 
 .cta {
