Design : signin, signup 페이지 구현

--- a/src/reset.css
+++ b/src/reset.css
@@ -6,6 +6,7 @@
   font-family: "Pretendard";
 }
 
+/* html 기본 폰트 크기 16px의 62.5%인 10px로 설정 */
 html,
 body {
   font-size: 62.5%;
@@ -14,4 +15,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  background: none;
+  border: 0;
+  cursor: pointer;
 }
