--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ header {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #f0f6ff;
+  background-color: var(--gray-5);
 }
 
 nav {
@@ -15,7 +15,7 @@ nav {
   max-width: 192rem;
   height: 9.4rem;
   padding: 0 20rem;
-  background-color: #f0f6ff;
+  background-color: var(--gray-5);
 }
 
 .hero-header {
@@ -33,7 +33,7 @@ nav {
   align-items: center;
   height: 5.4rem;
   cursor: pointer;
-  background-image: linear-gradient(135deg, #6d6afe 0%, #6ae3fe 100%);
+  background-image: linear-gradient(135deg, var(--primary) 0%, #6ae3fe 100%);
   border-radius: 0.8rem;
   color: #f5f5f5;
   font-size: 1.8rem;
@@ -49,7 +49,11 @@ nav {
 }
 
 .slogan {
-  background-image: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
+  background-image: linear-gradient(
+    91deg,
+    var(--primary) 17.28%,
+    #ff9f9f 74.98%
+  );
   text-align: center;
   font-size: 6.4rem;
   font-weight: 700;
@@ -119,7 +123,11 @@ section:nth-of-type(even) {
   background-image: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
 }
 .title-3-gradient {
-  background-image: linear-gradient(99deg, #6d7ccd 19.76%, #52888538 52.69%);
+  background-image: linear-gradient(
+    99deg,
+    #6d7ccd 19.76%,
+    rgba(82, 136, 133, 0.22) 52.69%
+  );
 }
 .title-4-gradient {
   background-image: linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%);
@@ -145,7 +153,7 @@ footer {
   width: 100%;
   height: 16rem;
   padding-top: 3.2rem;
-  background-color: #111322;
+  background-color: var(--black);
 }
 
 .footer-box {
