--- a/src/reset.css
+++ b/src/reset.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   margin: 0;
   font-family: "Pretendard";
+  font-weight: 400;
 }
 
 /* html 기본 폰트 크기 16px의 62.5%인 10px로 설정 */
