--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ header {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 9.4rem;
   background-color: var(--gray-5);
 }
 
@@ -18,13 +19,14 @@ nav {
   background-color: var(--gray-5);
 }
 
-.hero-header {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 4rem;
   padding-top: 7rem;
-  margin-top: 9.4rem;
+  margin-bottom: 7rem;
+  background-color: var(--gray-5);
+  gap: 4rem;
 }
 
 .cta {
@@ -48,103 +50,88 @@ nav {
   width: 35rem;
 }
 
-.slogan {
-  background-image: linear-gradient(
-    91deg,
-    var(--primary) 17.28%,
-    #ff9f9f 74.98%
-  );
-  text-align: center;
+.title {
+  color: black;
   font-size: 6.4rem;
   font-weight: 700;
-  line-height: 8rem;
-}
-
-.black {
-  color: black;
+  text-align: center;
 }
 
 .background-clip-text {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+  font-weight: 700;
 }
 
-.hero-image {
+.pink {
+  background-image: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
+}
+
+.slogan {
+  color: black;
+  font-weight: 700;
+  font-size: 4.8rem;
+}
+
+.content-1 {
+  background-image: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
+}
+
+.content-2 {
+  background-image: linear-gradient(277deg, #6fbaff 0%, #ffd88b 100%);
+}
+
+.content-3 {
+  background-image: linear-gradient(
+    99deg,
+    #6d7ccd 0%,
+    rgba(82, 136, 133, 0.22) 130%
+  );
+}
+
+.content-4 {
+  background-image: linear-gradient(
+    90deg,
+    rgba(104, 232, 249, 1) 0%,
+    rgba(158, 180, 211, 1) 88%
+  );
+}
+
+.main--img {
   width: 120rem;
   height: 59rem;
 }
 
-article {
-  padding-top: 7rem;
-  padding-bottom: 12rem;
-}
-
 section {
-  display: grid;
+  display: flex;
   justify-content: center;
-  column-gap: 15.7rem;
-  row-gap: 1rem;
-  width: 100%;
-  height: 55rem;
-  padding: 50px 0;
+  align-items: center;
+  padding: 5rem 0;
 }
 
-section:nth-of-type(odd) {
-  grid-template:
-    ". image"
-    "title image"
-    "description image"
-    ". image"
-    /291px 55rem;
+.container {
+  display: flex;
+  align-items: center;
+  gap: 15.7rem;
 }
 
-section:nth-of-type(even) {
-  grid-template:
-    "image ."
-    "image title"
-    "image description"
-    "image ."
-    /550px 29.1rem;
-}
-
-.title {
-  grid-area: title;
-  font-size: 4.8rem;
-  font-weight: 700;
-  line-height: 5.8rem;
-  letter-spacing: -0.03rem;
-}
-
-.title-1-gradient {
-  background-image: linear-gradient(96deg, #fe8a8a 1.72%, #a4ceff 74.97%);
-}
-.title-2-gradient {
-  background-image: linear-gradient(277deg, #6fbaff 59.22%, #ffd88b 93.66%);
-}
-.title-3-gradient {
-  background-image: linear-gradient(
-    99deg,
-    #6d7ccd 19.76%,
-    rgba(82, 136, 133, 0.22) 52.69%
-  );
-}
-.title-4-gradient {
-  background-image: linear-gradient(271deg, #fe578f -9.84%, #68e8f9 107.18%);
-}
-
-.description {
-  grid-area: description;
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: #6b6b6b;
-  line-height: 150%;
-}
-
-.content-image {
-  grid-area: image;
+.section--img {
   width: 55rem;
   height: 45rem;
+  border-radius: 15px;
+}
+
+.text-box {
+  width: 29.1rem;
+}
+
+.small {
+  color: #6b6b6b;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 150%; /* 24px */
+  margin-top: 1rem;
 }
 
 footer {
@@ -152,7 +139,6 @@ footer {
   justify-content: center;
   width: 100%;
   height: 16rem;
-  padding-top: 3.2rem;
   background-color: var(--black);
 }
 
@@ -160,31 +146,25 @@ footer {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding: 3.2rem 10.4rem 6.4rem;
   max-width: 192rem;
-  height: fit-content;
-  padding: 0 10.4rem;
 }
-
 .copyright {
   color: #676767;
   font-family: Arial;
   font-size: 1.6rem;
 }
 
-.footer-links {
+.footer--link {
   display: flex;
-  column-gap: 3rem;
-  padding-right: 1.8rem;
-}
-
-.footer-link {
   color: #cfcfcf;
   font-family: Arial;
   font-size: 1.6rem;
+  gap: 3rem;
 }
 
-.sns {
+.footer--sns {
   display: flex;
-  column-gap: 1.2rem;
   height: 2rem;
+  gap: 1.2rem;
 }
