--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 header {
   display: flex;
+  position: fixed;
   flex-direction: column;
   align-items: center;
   width: 100%;
@@ -9,7 +10,7 @@ header {
 
 nav {
   display: flex;
-  position: fixed;
+
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -23,10 +24,18 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 7rem;
+  padding-top: 16.4rem;
   margin-bottom: 7rem;
   background-color: var(--gray-5);
   gap: 4rem;
+}
+
+.title {
+  color: black;
+  font-size: 6.4rem;
+  font-weight: 700;
+  text-align: center;
+  word-break: keep-all;
 }
 
 .cta {
@@ -37,7 +46,7 @@ main {
   cursor: pointer;
   background-image: linear-gradient(135deg, var(--primary) 0%, #6ae3fe 100%);
   border-radius: 0.8rem;
-  color: #f5f5f5;
+  color: var(--grey-light);
   font-size: 1.8rem;
   font-weight: 600;
 }
@@ -50,13 +59,6 @@ main {
   width: 35rem;
 }
 
-.title {
-  color: black;
-  font-size: 6.4rem;
-  font-weight: 700;
-  text-align: center;
-}
-
 .background-clip-text {
   background-clip: text;
   -webkit-background-clip: text;
@@ -64,14 +66,8 @@ main {
   font-weight: 700;
 }
 
-.pink {
+.main--text {
   background-image: linear-gradient(91deg, #6d6afe 17.28%, #ff9f9f 74.98%);
-}
-
-.slogan {
-  color: black;
-  font-weight: 700;
-  font-size: 4.8rem;
 }
 
 .content-1 {
@@ -111,27 +107,53 @@ section {
 }
 
 .container {
-  display: flex;
+  display: grid;
   align-items: center;
-  gap: 15.7rem;
+  grid-template-rows: 1fr 11.6rem 8.2rem 1fr;
+}
+
+section:nth-child(odd) .container {
+  grid-template-columns: 55rem 15.7rem 29.1rem;
+  grid-template-areas:
+    "img . ."
+    "img . slogan"
+    "img . small"
+    "img . .";
+}
+
+section:nth-child(even) .container {
+  grid-template-columns: 29.1rem 15.7rem 55rem;
+  grid-template-areas:
+    ". . img"
+    "slogan . img"
+    "small . img"
+    ". . img";
 }
 
 .section--img {
+  grid-area: img;
   width: 55rem;
   height: 45rem;
-  border-radius: 15px;
+  border-radius: 1.5rem;
 }
 
-.text-box {
-  width: 29.1rem;
+.slogan {
+  grid-area: slogan;
+  color: black;
+  font-weight: 700;
+  font-size: 4.8rem;
+  word-break: keep-all;
 }
 
 .small {
+  align-self: start;
+  grid-area: small;
   color: #6b6b6b;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 500;
-  line-height: 150%; /* 24px */
-  margin-top: 1rem;
+  line-height: 150%;
+  padding-top: 1rem;
+  word-break: keep-all;
 }
 
 footer {
@@ -139,32 +161,43 @@ footer {
   justify-content: center;
   width: 100%;
   height: 16rem;
+  margin-top: 1.2rem;
   background-color: var(--black);
 }
 
 .footer-box {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "copyright link sns";
   width: 100%;
   padding: 3.2rem 10.4rem 6.4rem;
   max-width: 192rem;
 }
+
 .copyright {
+  grid-area: copyright;
   color: #676767;
   font-family: Arial;
   font-size: 1.6rem;
+  align-self: start;
 }
 
 .footer--link {
+  grid-area: link;
   display: flex;
+  justify-content: center;
+  gap: 3rem;
   color: #cfcfcf;
   font-family: Arial;
   font-size: 1.6rem;
-  gap: 3rem;
+  align-self: start;
 }
 
 .footer--sns {
+  grid-area: sns;
   display: flex;
+  justify-content: end;
   height: 2rem;
   gap: 1.2rem;
+  align-self: start;
 }
