Refactor : 눈모양 아이콘 클래스명 및 cursor 속성 추가

--- a/src/sign.css
+++ b/src/sign.css
@@ -77,10 +77,11 @@ form > div {
   position: relative;
 }
 
-form img {
+.eye-icon {
   position: absolute;
   top: 22px;
   right: 15px;
+  cursor: pointer;
 }
 
 input:focus {
