--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -14,6 +14,8 @@
   flex-direction: column;
   width: 340px;
   box-sizing: border-box;
+  border-radius: 15px;
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
 }
 
 .link-img-box {
@@ -21,19 +23,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 320px;
   height: 253.746px;
   flex-shrink: 0;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
 }
 
 .link-img {
-  width: 100%;
+  max-width: 150%;
+  object-fit: cover;
+  object-position: center;
 }
 
-.description {
+.detail-box {
   display: flex;
   flex-direction: column;
   padding: 15px 20px;
   gap: 10px;
   background-color: #fff;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-family: Pretendard;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
 }
