--- a/src/components/Contents.css
+++ b/src/components/Contents.css
@@ -1,19 +1,27 @@
 .main {
   position: relative;
   display: flex;
+  width: 1060px;
   flex-direction: column;
   align-items: center;
   margin: 40px auto;
   gap: 40px;
 }
 
-.search-bar {
+.search-bar-box {
   display: flex;
-  width: 1060px;
-  padding: 15px 16px;
+  width: 100%;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 15px 16px;
   border-radius: 10px;
-  border: none;
   background: #f5f5f5;
+  gap: 10px;
+}
+
+.search-bar {
+  width: 100%;
+  background-color: transparent;
+  border: none;
 }
