--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -16,6 +16,7 @@
   box-sizing: border-box;
   border-radius: 15px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
 }
 
 .link-img-box {
@@ -53,4 +54,14 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+}
+
+.elapsed-time {
+  color: #666;
+  font-size: 13px;
+}
+
+.formatted-data {
+  color: #333;
+  font-size: 14px;
 }
