--- a/src/components/Contents.css
+++ b/src/components/Contents.css
@@ -4,7 +4,7 @@
   width: 1060px;
   flex-direction: column;
   align-items: center;
-  margin: 40px auto;
+  margin: 40px auto 100px;
   gap: 40px;
 }
 
