--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -11,3 +11,17 @@
   align-items: center;
   gap: 6px;
 }
+
+.cta {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 54px;
+  width: 128px;
+  cursor: pointer;
+  background-image: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  border-radius: 8px;
+  color: #f5f5f5;
+  font-size: 18px;
+}
