Design : card에 마우스 오버 시 색상 변경

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -18,6 +18,10 @@
   cursor: pointer;
 }
 
+.card:hover .detail-box {
+  background-color: #f0f6ff;
+}
+
 .link-img-box {
   overflow: hidden;
   display: flex;
