--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,13 +5,15 @@ footer {
 }
 
 .footer-container {
-  display: flex;
+  display: grid;
   justify-content: space-between;
   padding: 32px 104px 64px;
+  grid-template-areas: "copyright link-box sns-logo-box";
   width: 100%;
 }
 
 .copyright {
+  grid-area: copyright;
   color: #676767;
 }
 
@@ -22,11 +24,22 @@ footer {
 }
 
 .link-box {
+  grid-area: link-box;
   display: flex;
   gap: 30px;
 }
 
 .sns-logo-box {
+  grid-area: sns-logo-box;
   display: flex;
   gap: 12px;
+}
+
+@media (max-width: 767px) {
+  .footer-container {
+    grid-template-columns: auto;
+    grid-template-areas: "link-box sns-logo-box" "copyright .";
+    row-gap: 60px;
+    padding: 32px;
+  }
 }
