--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -1,9 +1,16 @@
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f6ff;
+  padding: 32px 200px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 32px 200px;
-  background-color: #f0f6ff;
+  width: 100%;
 }
 
 .user-account {
