Refactor : Tablet 사이즈 적용 시 화면의 너비 1124px를 기준으로 수정

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,12 +36,14 @@
   nav {
     width: 800px;
   }
-  .cards {
-    width: 704px;
-  }
+  @media (max-width: 1124px) {
+    .cards {
+      width: 704px;
+    }
 
-  main {
-    width: 704px;
-    margin: 40px 32px 100px;
+    main {
+      width: 704px;
+      margin: 40px 32px 100px;
+    }
   }
 }
