--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -27,6 +27,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 200px;
   flex-shrink: 0;
   border-top-right-radius: 15px;
@@ -34,13 +35,13 @@
 }
 
 .link-img {
-  max-width: 115%;
-  transition: width 0.3s ease;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .card:hover .link-img {
-  max-width: none;
-  width: 130%;
+  transition: all 0.3s;
+  transform: scale(1.3);
 }
 
 .detail-box {
