--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -1,5 +1,8 @@
 header {
   display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 1;
   justify-content: center;
   align-items: center;
   background-color: #f0f6ff;
