--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -16,6 +16,17 @@ nav {
   width: 100%;
 }
 
+.profile-icon {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+}
+
+.user-email {
+  color: #373740;
+  font-size: 14px;
+}
+
 .user-account {
   display: flex;
   align-items: center;
