--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,7 @@ body {
   margin: 0;
   font-family: "Pretendard";
   font-weight: 400;
+  font-size: 14px;
+  font-style: normal;
+  line-height: normal;
 }
