Feat : 링크 추가 모달 생성 및 사용자 정보 있으면 프로필에 표시하는 기능 추가

--- a/pages/components/user/Profile.module.css
+++ b/pages/components/user/Profile.module.css
@@ -4,6 +4,14 @@
   gap: 6px;
 }
 
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 54px;
+  gap: 6px;
+}
+
 .profile_icon {
   width: 28px;
   height: 28px;
