Feat : 전체 폴더는 공유, 수정, 삭제 버튼 숨기기

--- a/pages/folder/styles/EditBox.module.css
+++ b/pages/folder/styles/EditBox.module.css
@@ -13,6 +13,8 @@
 }
 
 .edit {
+  display: flex;
+  gap: 12px;
   justify-content: left;
 }
 
@@ -29,7 +31,6 @@
   cursor: pointer;
 }
 
-.isVisible {
-  display: flex;
-  gap: 12px;
+.isInVisible {
+  display: none;
 }
