--- a/pages/signup/Signup.module.css
+++ b/pages/signup/Signup.module.css
@@ -1,8 +1,9 @@
 .wrapper {
   background-color: #f0f6ff;
-  width: 1440px;
-  height: 982px;
-  padding-top: 238px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 120px;
   padding-bottom: 117px;
 }
 
