--- a/pages/components/searchbar/SearchBar.module.css
+++ b/pages/components/searchbar/SearchBar.module.css
@@ -8,7 +8,6 @@
   border-radius: 10px;
   background: #f5f5f5;
   gap: 10px;
-  margin-bottom: 16px;
 }
 
 .search_input {
@@ -21,4 +20,20 @@
 
 .erase_button :active {
   filter: brightness(80%);
+}
+
+.input_value {
+  color: var(--Linkbrary-gray100, #9fa6b2);
+  font-size: 32px;
+  font-weight: 600;
+  width: 100%;
+  text-align: left;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.input_value_description {
+  color: var(--Linkbrary-gray100, #373740);
+  font-size: 32px;
+  font-weight: 600;
 }
