--- a/pages/folder/styles/FolderLinkContainer.module.css
+++ b/pages/folder/styles/FolderLinkContainer.module.css
@@ -17,3 +17,11 @@
     gap: 20px;
   }
 }
+
+.no_link {
+  width: 100%;
+  margin-top: 41px;
+  margin-bottom: 35px;
+  text-align: center;
+  font-size: 16px;
+}
