--- a/pages/components/auth/Input.module.css
+++ b/pages/components/auth/Input.module.css
@@ -1,3 +1,17 @@
+.input_container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.input_form_container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 12px;
+}
+
 .input_form {
   display: flex;
   width: 400px;
@@ -21,4 +35,11 @@
 
 .invalid_border {
   border: 1px solid #ff5b56;
+}
+
+.eye_icon {
+  cursor: pointer;
+  position: absolute;
+  right: 15px;
+  top: 18px;
 }
