Design : 색상 및 폰트 변수 사용

--- a/pages/components/card/SelectMenu.module.css
+++ b/pages/components/card/SelectMenu.module.css
@@ -16,6 +16,6 @@
 }
 
 .option:hover {
-  background-color: #e7effb;
-  color: #6d6afe;
+  background-color: var(--gray10);
+  color: var(--primary);
 }
