--- a/pages/folder/styles/FolderBox.module.css
+++ b/pages/folder/styles/FolderBox.module.css
@@ -16,22 +16,22 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  border: 1px solid #6d6afe;
+  border: 1px solid var(--primary);
   cursor: pointer;
 }
 
 .selected_folder_color {
-  background: #6d6afe;
-  color: #fff;
+  background: var(--primary);
+  color: var(--white);
 }
 
 .default_folder_color {
-  background: #fff;
-  color: #000;
+  background: var(--white);
+  color: var(--black);
 }
 
 .default_folder_color:hover {
-  background-color: #e7effb;
+  background-color: var(--gray10);
 }
 
 .folder_add {
@@ -50,7 +50,7 @@
 
 .folder_add .folder_add_text span {
   font-size: 16px;
-  color: #6d6afe;
+  color: var(--primary);
 }
 
 .folder_add .folder_add_button {
@@ -70,9 +70,9 @@
     height: 36px;
 
     border-radius: 20px;
-    border: 1px solid #fff;
-    background: #6d6afe;
-    color: #e7effb;
+    border: 1px solid var(--white);
+    background: var(--primary);
+    color: var(--gray10);
 
     display: flex;
     align-items: center;
