--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -8,9 +8,9 @@
   width: 100px;
   display: block;
   border-radius: 20px;
-  border: 1px solid #fff;
-  background: #6d6afe;
-  color: #fff;
+  border: 1px solid var(--white);
+  background: var(--primary);
+  color: var(--white);
   text-align: center;
   text-decoration: none;
 }
