--- a/pages/components/auth/AuthForm.module.css
+++ b/pages/components/auth/AuthForm.module.css
@@ -14,8 +14,5 @@
   gap: 10px;
   color: white;
   border-radius: 8px;
-  background: var(
-    --gra-purpleblue-to-skyblue,
-    linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
-  );
+  background: var(--gra-purpleblue-to-skyblue);
 }
