--- a/pages/components/auth/Input.module.css
+++ b/pages/components/auth/Input.module.css
@@ -19,22 +19,22 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
-  background: var(--Linkbrary-white, #fff);
+  border: 1px solid var(--gray20);
+  background: var(--white);
 }
 
 .input_form:focus {
-  border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
+  border: 1px solid var(--primary);
 }
 
 .error_message {
-  color: #ff5b56;
+  color: var(--red);
   position: relative;
   top: -6px;
 }
 
 .invalid_border {
-  border: 1px solid #ff5b56;
+  border: 1px solid var(--red);
 }
 
 .eye_icon {
