--- a/pages/components/card/Card.module.css
+++ b/pages/components/card/Card.module.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   padding: 15px 20px;
   gap: 10px;
-  background-color: #fff;
+  background-color: var(--white);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
@@ -59,7 +59,7 @@
 }
 
 .card:hover > .detail {
-  background-color: #f0f6ff;
+  background-color: var(--light-blue);
 }
 
 .card:hover .link_img {
