--- a/pages/components/footer/Footer.module.css
+++ b/pages/components/footer/Footer.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  background-color: #111322;
+  background-color: var(--black);
 }
 
 .container {
@@ -21,12 +21,12 @@
 
 .copyright {
   grid-area: copyright;
-  color: #676767;
+  color: var(--text-gray);
 }
 
 .privacy,
 .faq {
-  color: #676767;
+  color: var(--text-gray);
   text-decoration: none;
 }
 
