--- a/pages/components/modal/IconBox.module.css
+++ b/pages/components/modal/IconBox.module.css
@@ -8,11 +8,10 @@
 }
 
 .sns {
-  color: var(--Linkbrary-gray100, #373740);
+  color: var(--gray100);
   text-align: center;
   font-size: 13px;
   font-style: normal;
-  font-weight: 400;
   line-height: 15px;
 }
 
