--- a/pages/components/nav/NavBar.module.css
+++ b/pages/components/nav/NavBar.module.css
@@ -5,7 +5,7 @@
   z-index: 2;
   justify-content: center;
   align-items: center;
-  background-color: #f0f6ff;
+  background-color: var(--light-blue);
   padding: 32px 200px;
 
   /* Mobile size */
