--- a/pages/components/searchbar/SearchBar.module.css
+++ b/pages/components/searchbar/SearchBar.module.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   padding: 15px 16px;
   border-radius: 10px;
-  background: #f5f5f5;
+  background: var(--gray-light);
   gap: 10px;
 }
 
@@ -23,9 +23,9 @@
 }
 
 .input_value {
-  color: var(--Linkbrary-gray100, #9fa6b2);
+  color: var(--gray60);
   font-size: 32px;
-  font-weight: 600;
+  font-weight: var(--font-bold);
   width: 100%;
   text-align: left;
   margin-top: 16px;
@@ -33,7 +33,7 @@
 }
 
 .input_value_description {
-  color: var(--Linkbrary-gray100, #373740);
+  color: var(--gray100);
   font-size: 32px;
-  font-weight: 600;
+  font-weight: var(--font-bold);
 }
