--- a/pages/components/user/Profile.module.css
+++ b/pages/components/user/Profile.module.css
@@ -19,7 +19,7 @@
 }
 
 .user_email {
-  color: #373740;
+  color: var(--gray100);
   font-size: 14px;
   @media (max-width: 767px) {
     display: none;
@@ -34,8 +34,8 @@
   height: 54px;
   width: 128px;
   cursor: pointer;
-  background-image: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  background-image: var(--gra-purpleblue-to-skyblue);
   border-radius: 8px;
-  color: #f5f5f5;
+  color: var(--gray-light);
   font-size: 18px;
 }
