--- a/pages/folder/styles/AddLink.module.css
+++ b/pages/folder/styles/AddLink.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #f0f6ff;
+  background-color: var(--light-blue);
 }
 
 .container {
@@ -14,7 +14,7 @@
   margin: 60px 200px 90px;
   gap: 8px;
   border-radius: 15px;
-  border: 1px solid #6d6afe;
+  border: 1px solid var(--primary);
   background: white;
 
   @media (max-width: 1124px) {
@@ -33,11 +33,11 @@
   align-items: center;
   width: 110px;
   padding: 10px 16px;
-  background-image: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
+  background-image: var(--gra-purpleblue-to-skyblue);
   border-radius: 8px;
-  color: #f5f5f5;
+  color: var(--gray-light);
   font-size: 14px;
-  font-weight: 500;
+  font-weight: var(--font-semibold);
 }
 
 .link_input {
