--- a/pages/shared/styles/FolderInfo.module.css
+++ b/pages/shared/styles/FolderInfo.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 20px 0 60px;
   width: 100%;
-  background-color: #f0f6ff;
+  background-color: var(--light-blue);
 }
 
 .folder_info {
@@ -16,5 +16,5 @@
 
 .name {
   font-size: 40px;
-  font-weight: 600;
+  font-weight: var(--font-bold);
 }
