--- a/pages/signin/Signin.module.css
+++ b/pages/signin/Signin.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background-color: #f0f6ff;
+  background-color: var(--light-blue);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,9 +21,9 @@
 }
 
 .signup_link {
-  color: var(--Linkbrary-primary-color, #6d6afe);
+  color: var(--primary);
   text-decoration: underline;
-  font-weight: 600;
+  font-weight: var(--font-bold);
 }
 
 .social_login {
@@ -34,8 +34,8 @@
   align-items: center;
 
   border-radius: 8px;
-  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
-  background: var(--Linkbrary-gray10, #e7effb);
+  border: 1px solid var(--gray20);
+  background: var(--gray10);
 }
 
 .icon_box {
