--- a/pages/components/modal/SelectFolder.module.css
+++ b/pages/components/modal/SelectFolder.module.css
@@ -1,12 +1,12 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin-bottom: 24px;
   width: 100%;
   height: 172px;
-  overflow-y: scroll;
+  overflow-y: auto;
   row-gap: 4px;
 }
 
