--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -56,6 +56,7 @@
   border-radius: 15px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   cursor: pointer;
+  overflow: hidden;
 }
 
 .card:hover > .detail {
