--- a/src/components/common/SearchContent.module.css
+++ b/src/components/common/SearchContent.module.css
@@ -7,16 +7,6 @@
   width: 1060px;
   row-gap: 25px;
   column-gap: 20px;
-
-  @media (max-width: 1124px) {
-    width: 704px;
-    grid-template-columns: 1fr 1fr;
-  }
-  @media (max-width: 767px) {
-    width: 325px;
-    grid-template-columns: 1fr;
-    margin: 20px 32px 60px;
-  }
 }
 
 .no_link {
@@ -25,4 +15,28 @@
   margin-bottom: 35px;
   text-align: center;
   font-size: 16px;
+  grid-column: span 3;
+}
+
+@media (max-width: 1124px) {
+  .wrapper {
+    width: 704px;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .no_link {
+    grid-column: span 2;
+  }
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+    width: 325px;
+    grid-template-columns: 1fr;
+    margin: 20px 32px 60px;
+  }
+
+  .no_link {
+    grid-column: span 1;
+  }
 }
